compiler/tools/fpp-check/test/interface/async_port_in_passive.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/interface/async_port_in_passive.fpp:4.5
    async input port P: P
    ^
error: passive component may not have async input
